# circuitron-open

./: .env.example  .env.local.example  .gitignore  .mcp.json  CLAUDE.md  README.md  SETUP.md  TASKS.md  docker-compose.yml  mcp.env.example  mcp.env.local.example  pyproject.toml  requirements.txt  setup_pgvector_local.sql
.claude/: settings.json
.githooks/: pre-push
circuitron/: agents.py  cli.py  config.py  cost_estimator.py  debug.py  guardrails.py  mcp_manager.py  models.py  network.py  pipeline.py  prompts.py  provider.py  settings.py  setup.py  setup_agent.py  tools.py  utils.py
circuitron/providers/: __init__.py  anthropic.py  ollama.py  openai_agents.py
circuitron/ui/: app.py
mcp/: Dockerfile  utils_local.py
mcp_server/: Dockerfile  embeddings.py  main.py  requirements.txt
mcp_server/data/: skidl_kg.json
mcp_server/tools/: kg.py  rag.py
